--- a/pytest_project/page_element/Store/buy-option.yaml
+++ b/pytest_project/page_element/Store/buy-option.yaml
@@ -9,4 +9,4 @@ pmm-single-license: 'css=body>div.buyBg>div>div>div:nth-child(3)>p:nth-child(2)>
 pmm-family-license: 'css=body>div.buyBg>div>div>div:nth-child(3)>p:nth-child(2)>span:nth-child(3)'   #家庭永久
 pmm-option: 'css=body>div.storeBG>div>div>div:nth-child(1)>div:nth-child(2)>a:nth-child(6)'   #pmm更多按钮
 video-option: 'css=body>div.storeBG>div>div>div:nth-child(2)>div:nth-child(2)>a:nth-child(6)' #video更多按钮
-selectButton: 'css=body>div.storeBG>div>div>div:nth-child(3)>p:nth-child(2)>span:nth-child(2)' #pmm永久套餐按钮选中状态
+selectButton: 'css=body>div.buyBg>div>div>div:nth-child(3)>p:nth-child(2)>span:nth-child(2)' #pmm永久套餐按钮选中状态
