--- a/pytest_project/pytest.ini
+++ b/pytest_project/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = --html=report/report.html  --self-contained-html --log-cli-level=INFO  -n auto --reruns 1 --reruns-delay 10
+addopts =-n auto --reruns 1 --reruns-delay 10
