--- a/pytest_project/pytest.ini
+++ b/pytest_project/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = --log-cli-level=INFO -n auto --reruns 1 --reruns-delay 10
+addopts = --log-cli-level=INFO  --reruns 1 --reruns-delay 10
