--- a/pytest_project/page_element/Store/body.yaml
+++ b/pytest_project/page_element/Store/body.yaml
@@ -1,9 +1,9 @@
 pmm:
   buy-button: 'css=#powermymac-one-month'     #ppm购买按钮
-  options: 'css=body>div:nth-child(4)>div>div>div:nth-child(1)>div:nth-child(2)>a:nth-child(6)' #ppm配置更多按钮
+  options: 'css=div.buyBox.text-center>div:nth-child(1)>div>a:nth-child(6))' #ppm配置更多按钮
 video:
   buy-button: 'css=#video-converter-one-year'      #video购买按钮
-  options: 'css=body>div:nth-child(4)>div>div>div:nth-child(2)>div:nth-child(2)>a:nth-child(6)' #video更多按钮
+  options: 'css=div.buyBox.text-center>div:nth-child(2)>div>a:nth-child(6))' #video更多按钮
 iframe: 'css=body>iframe'
 language: 'xpath=//select[@data-testid="languageSelector"]'     # 语言切换按钮
 send-email: 'css=#root>div>div>div>div:nth-child(2)>div>div>form>div>div>input'   #邮箱输入框
@@ -41,3 +41,4 @@ delete-conpon: 'css=#root > div > div> div > div:nth-child(2) > div > div > div 
 load-paypal: 'css=#root > div > div> div> div:nth-child(2)>div>div>div'
 cancel-paypal-pay: 'css=#root > div > div> div> div:nth-child(2)>div>div>div:nth-child(2)>div>button:nth-child(3)'
 card-pay-BANK-error: 'css=#root > div > div> div>div:nth-child(2)>div>div>div:nth-child(3)>span'
+bank-safe: 'css=div.sc-kiIyQV.gYyJcw'     #银行安全信息
