--- a/pytest_project/page_element/Contact/contact.yaml
+++ b/pytest_project/page_element/Contact/contact.yaml
@@ -1,4 +1,4 @@
-email-link: 'css=body>div:nth-child(4)>div:nth-child(2)>div:nth-child(2)>p>a'  #邮箱链接
-question: 'css=body>div:nth-child(4)>div:nth-child(2)>div:nth-child(1)>p'
-email: 'css=body>div:nth-child(4)>div:nth-child(2)>div:nth-child(2)>p'
-suggestion: 'css=body>div:nth-child(4)>div:nth-child(2)>div:nth-child(3)>p'
+email-link: 'css=p>a'  #邮箱链接
+question: 'css=div.container >div:nth-child(2)> div:nth-child(1)>p'
+email: 'css=div.container >div:nth-child(2)> div:nth-child(2)>p'
+suggestion: 'css=div.container >div:nth-child(2)> div:nth-child(3)>p'
