--- a/pytest_project/page_element/Store/body.yaml
+++ b/pytest_project/page_element/Store/body.yaml
@@ -40,5 +40,5 @@ update-email: 'css=#root>div>div>div:nth-child(2)>div:nth-child(2)>div:nth-child
 delete-conpon: 'css=#root > div > div> div > div:nth-child(2) > div > div > div > div > span:nth-child(3)>div:nth-child(2)>div>div:nth-child(3)>div'
 load-paypal: 'css=#root > div > div> div> div:nth-child(2)>div>div>div'
 cancel-paypal-pay: 'css=#root > div > div> div> div:nth-child(2)>div>div>div:nth-child(2)>div>button:nth-child(3)'
-card-pay-BANK-error: 'css=#root > div > div> div>div:nth-child(2)>div>div>div:nth-child(3)>span'
+card-pay-BANK-error: 'css=#root > div > div> div>div:nth-child(2)>div>div'
 bank-safe: 'css=div.sc-kiIyQV.gYyJcw'     #银行安全信息
