维护脚本，修复2022/1/18问题

--- a/pytest_project/page_element/VideoConverter/video-tech.yaml
+++ b/pytest_project/page_element/VideoConverter/video-tech.yaml
@@ -3,7 +3,7 @@ buy: 'css=body > div>div>div>div> a:nth-child(2)'  #购买链接
 buy-class: 'css=body>div.buyBg'
 index: 'css=body > div>div>div>div.guideBox.techBox> a:nth-child(1)'              #video-tech页面
 guide: 'css=body > div>div>div>div.guideBox.techBox> a:nth-child(2)'              #技巧按钮
-guide-handle: 'css=body > div.container > div:nth-child(2) > h1'
+guide-button: 'css=div.guideBox'
 support-body: 'css=body > div> div.w780.vc-guide > div'       #支持内容
 support-handle: 'css=body > div> div.w780.vc-guide > h1'     #支持标题
 article-class: 'css=body > div>div.w780>div.tipsBox'      #文章class
