--- a/pytest_project/page_element/VideoConverter/video-guide.yaml
+++ b/pytest_project/page_element/VideoConverter/video-guide.yaml
@@ -1,12 +1,12 @@
 free-download: 'css=body > div>div>div>div> a:nth-child(1)'  #下载链接
 buy: 'css=body > div>div>div>div> a:nth-child(2)'  #购买链接
 buy-class: 'css=body>div.buyBg'
-index: 'css=body > div.container > div:nth-child(1) > div > div.guideBox > a:nth-child(1)'              #video-tech页面
-guide: 'css=body > div.container > div:nth-child(1) > div > div.guideBox > a:nth-child(2)'              #技巧按钮
-guide-handle: 'css=body > div.container > div:nth-child(2) > h1'
 support-body: 'css=body > div> div.w780.vc-guide > div'       #支持内容
 support-handle: 'css=body > div> div.w780.vc-guide > h1'     #支持标题
 article-class: 'css=body > div>div.w780>div.tipsBox'      #文章class
+win-guide: 'css=div.guideBox>a:nth-child(2)'   #win指南
+mac-guide: 'css=div.guideBox>a:nth-child(1)'   #mac指南
+guide-header: 'css=div.container>div.w780.macContent>h1'
 #文章链接
 article-link:
   convert-m4a-to-mp3: 'css=body > div>div.w780>div.tipsBox>a:nth-child(2)'
