--- a/pytest_project/page_element/Store/buy.yaml
+++ b/pytest_project/page_element/Store/buy.yaml
@@ -18,8 +18,8 @@ submitCouponButton: 'css=form>div:nth-child(2)>div>button' #提交优惠卷
 cancelCouponButton: "css=form[action='#']>div:nth-child(2)>button"   #取消按钮
 delete-conpon: 'css=#root > div > div> div > div:nth-child(2) > div > div > div > div > span:nth-child(3)>div:nth-child(2)>div>div:nth-child(3)>div'
 update-email: 'css=#root>div>div>div:nth-child(2)>div:nth-child(2)>div:nth-child(2)>span:nth-child(2)'    # 更改邮箱
-card-pay: 'css=#root > div > div> div> div > div > div >div:nth-child(3)>div>div:nth-child(1)>button'  #卡片支付方式
-paypal: 'css=#root > div > div> div> div> div > div >div:nth-child(3)>div>div:nth-child(2)>button'  #PayPal支付方式
+card-pay: 'css=#root>div>div>div>div:nth-child(2)>div>div>div:nth-child(3)>div>button:nth-child(1)'  #卡片支付方式
+paypal: 'css=#root>div>div>div>div:nth-child(2)>div>div>div:nth-child(3)>div>button:nth-child(2)'  #PayPal支付方式
 card-pay-texts: 'css=#root > div > div> div> div> div > div > div> form > span'   #填写卡的错误信息
 cardNumber: 'css=form>div>div:nth-child(1)>div>input'  #卡号
 cardName: 'css=form>div>div:nth-child(2)>div>input'    #持有名
