--- a/pytest_project/page_element/Resource/resource.yaml
+++ b/pytest_project/page_element/Resource/resource.yaml
@@ -36,8 +36,10 @@ article-page-li-button:     #页码按钮
 page-check: 'css=a.pagination-activate'
 page-up-button: 'css=ul.pagination>li:nth-child(1)>a'   #上一页
 page-down-button: 'css=ul.pagination>li:nth-child(11)>a'    #下一页
-source-content: 'css=div.gsc-expansionArea>div:nth-child(1)>div>div:nth-child(3)>div:nth-child(2)>div:nth-child(3)'   #google搜索的第一条内容标题
-source-two-content: 'css=div.gsc-expansionArea>div:nth-child(2)>div>div:nth-child(3)>div>div:nth-child(3)'   #google搜索的第二条内容标题
+source-content: 'css=div.gsc-expansionArea>div:nth-child(1)>div>div:nth-child(1)'   #google搜索的第一条内容标题
+source-two-content: 'css=div.gsc-expansionArea>div:nth-child(2)>div>div:nth-child(1)'   #google搜索的第二条内容标题
+source-content-data: 'xpath=//*[@id="___gcse_0"]/div/div/div/div[5]/div[2]/div/div/div[1]/div[1]/div/div[3]/div/div[@dir="ltr"]'   #google搜索的第一条内容发布时间
+source-two-content-data: 'xpath=//*[@id="___gcse_0"]/div/div/div/div[5]/div[2]/div/div/div[1]/div[2]/div/div[3]/div/div[@dir="ltr"]'   #google搜索的第二条发布时间
 source-text: "css=span[class$='query']"    #google搜索的关键字
 google-page:                    #google插件页码
   '1': 'css=div.gsc-cursor>div:nth-child(1)'
