--- a/pytest_project/page_element/Store/buy.yaml
+++ b/pytest_project/page_element/Store/buy.yaml
@@ -1,7 +1,7 @@
 buy-language: 'css=select[data-testid="languageSelector"]'
 iframe: 'css=body>iframe'  #购买弹窗licensePrice
 num_select: 'css=#root>div>div>div>div>div>div>select'
-price: 'css=#root>div>div>div>div:nth-child(2)>div>div>form>div:nth-child(3)>div>div>span:nth-child(2)>span>var' #金额
+price: 'css=#root>div>div>div>div:nth-child(2)>div>div>div>div>span:nth-child(2)>span>var' #金额
 send-email: 'css=#root>div>div>div>div:nth-child(2)>div>div>form>div>div>input'   #邮箱输入框
 next:
   one: 'css=#root>div>div>div>div:nth-child(2)>div>div>form>div>div>button'  #第一个继续
@@ -21,16 +21,16 @@ update-email: 'css=#root>div>div>div:nth-child(2)>div:nth-child(2)>div:nth-child
 card-pay: 'css=#root>div>div>div>div:nth-child(2)>div>div>div:nth-child(3)>div>button:nth-child(1)'  #卡片支付方式
 paypal: 'css=#root>div>div>div>div:nth-child(2)>div>div>div:nth-child(3)>div>button:nth-child(2)'  #PayPal支付方式
 card-pay-texts: 'css=#root > div > div> div> div> div > div > div> form > span'   #填写卡的错误信息
-cardNumber: 'css=form>div>div:nth-child(1)>div>input'  #卡号
-cardName: 'css=form>div>div:nth-child(2)>div>input'    #持有名
-cardMonth: 'css=form>div>div:nth-child(3)>div:nth-child(2)>div>div:nth-child(2)>div:nth-child(1)>input'  #月
-cardYear: 'css=form>div>div:nth-child(3)>div:nth-child(2)>div>div:nth-child(2)>div:nth-child(2)>input'   #年
-cardPwd: 'css=form>div>div:nth-child(3)>div:nth-child(2)>div:nth-child(2)>div:nth-child(2)>input'    #密码
-cardSubmit: 'css=#root>div>div>div>div:nth-child(2)>div>div>div:nth-child(3)>form>div:nth-child(2)>div>button'     #立即订阅
+cardNumber: 'css=input#cardNumber'  #卡号
+cardName: 'css=input#name'    #持有名
+cardMonth: 'css=input#month'  #月
+cardYear: 'css=input#year'   #年
+cardPwd: 'css=input#cvv'    #密码
+cardSubmit: 'css=form>div:nth-child(2)>div>button'     #立即订阅
 cancel-pay: 'css=#root>div>div>div>div:nth-child(2)>div>div>div:nth-child(3)>div>button'   #更换支付方式
 close-pay: 'css=#root > div > div> div> div> div:nth-child(4) > img'  #关闭支付页面
 buy-handle: 'css=body > div.buyBg > div > h1'       #更多购买套餐页面标题
 load-paypal: 'css=#root > div > div> div> div:nth-child(2)>div>div>div'
 cancel-paypal-pay: 'css=#root > div > div> div> div:nth-child(2)>div>div>div:nth-child(2)>div>button:nth-child(3)'
-card-pay-BANK-error: 'css=#root > div > div> div>div:nth-child(2)>div>div'
+card-pay-BANK-error: 'xpath=//span[@data-testid="notification"]'
 bank-safe: 'css=div.sc-kiIyQV.gYyJcw'     #银行安全信息
