--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-pytest_project/allure-results/*
 pytest_project/.pytest_cache
-pytest_project/report/*
+pytest_project/report/data
 test.py
 pytest_project/logs/*
 .git
